--- a/index.html
+++ b/index.html
@@ -15,33 +15,32 @@
     <div class="half-width">
       <h1>Welcome To</h1>
       <h2><span class="orange-color">MD ABU TAIAB</span> PORTFOLIO!</h2>
-
-      <h3>I am a Deputy Manager at Paramount Insurance Company Limited.</h3>
+      <h3 class="paramount">I am a Deputy Manager at <br> Paramount Insurance Company Limited.</h3>
       <div>
         <h4>
-          <i><b><u> Career Objective: </u></b></i>
+          <b><u> Career Objective: </u></b>
         </h4>
-        <p>
+        <i><p>
           To enhance my knowledge and capabilities by working in a dynamic organization that prides itself in giving
           substantial
           responsibility to new talent and adding substantial values for achieving the vision of that organization.
-        </p>
+        </p></i>
       </div>
-      <div>
-        <h4>
-          <i><b><u>Career Summary: </u></b></i>
-        </h4>
-        <p>
-          Hi! My name is Md. Abu Taiab. Welcome to my personal portfolio that I've designed to showcase my skills and
-          expertise that I've
-          accumulated over the year.
-        </p>
-      </div>
-      <a class="link-button" target="_blank" href="https://www.linkedin.com/in/abutaiab/">Hire Me</a>
     </div>
     <div class="half-width">
       <img src="images/my-taiab.png" alt="" />
     </div>
+  </section>
+  <section >
+    <div class="container Career">
+      <h4>
+        <b><u>Career Summary: </u></b>
+      </h4>
+      <i><p>
+        According to the career expectation, I have started my career in Oracle where I have built different kinds of ERP solutions by using Oracle Database and Oracle Forms & Report Builders. Which I contributed to the Confidence Software Limited. I have connected to a large number of clients and solutions to their problems. I also troubleshoot many more problems with SQL & PL/SQL and Oracle Apex. Within this time technology has changed rapidly. Market ware expects reporting service and I manage my clients by jasper report.  In the year 2021 I drive my career within the latest technology by HTML-5,CSS-3, JavaScript, React js, Node js, TypeScript, MongoDB. HTML Report,Crystal Report. Now I am given support by Paramount Insurance Company Limited as Deputy Manager (IT). I am not close to learning technology according to market expectations. I hope it will open a new door for my career.
+      </p></i>
+    </div>
+    <a class="link-button hire" target="_blank" href="https://www.linkedin.com/in/abutaiab/">Hire Me</a>
   </section>
   <section class="my-dream flexible-container">
     <div class="half-width">
